# cibum

backend/: .gitignore  .values.template.yaml  Dockerfile  main.py  migrate_managed.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 1a1da57155fa_add_unit_table.py  2407e2cea5ec_add_diet_output_tables.py  2aecfae9e54c_update_cost_table.py  3bf1ecd7a259_remove_ingredientnutrient_table.py  49f3d805cae9_update_unit_table.py  51096cdce971_update_profile_constraint_table.py  5d857111e5a9_update_keys.py  704f7b37cbc4_add_ingredient_nutrient_join_table.py  8004bb11e498_add_units_to_nutrient_value_table.py  887768219df7_add_ingredients.py  986932df18bd_add_diet_output_tables.py  a6cc5b6978f4_add_diet_tables.py  a95b6d19f516_do_stuff.py  c5a17883e285_add_nutrient_values_table.py  cb3e331b245d_remove_pandalist_add_category_.py  cd0c80a8dc08_remove_pandalist_add_category_.py  d53e656f50fe_update_unit_table.py  e7140aede8b5_initial_revision.py  ea2e475d225a_add_managed_key.py
backend/app/: config.py  crud.py  db.py  models.py  optimizer.py  redis.py
backend/app/clerk/: api.py
backend/app/graphql/: access.py  auth.py  context.py  dataloader.py  schemas.py  utils.py
backend/app/graphql/mutations/: __init__.py  diets.py  ingredient_categories.py  ingredients.py  nutrient_categories.py  (+3 more)
backend/chart/: Chart.yaml  values.yaml
backend/chart/templates/: configmap.yaml  deployment.yaml  httproute.yaml
backend/data/: managed_ingredients.json  managed_nutrients.json  managed_units.json
backend/scripts/: build.sh  deploy.sh  format.sh
(+145 files in other folders)
